code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_12.wast
(assert_invalid
  (module
    (type $sig (func))
    (func (block (type $sig) (i32.const 0)))
  )
  "type mismatch"
)